css/base.css
#field {
  font-family: 'Courier New', Courier, monospace;
  font-size: clamp(1.5vw, 2vw, 3vw);
}
#field, #defense, #los, #offense {
  display: grid;
  /* @todo It'd be great if these columns were generated based on the number of columns via script. Instead of hard-coding here */
  grid-template-columns: 1fr 1vw 1fr 1vw 1fr 1vw 1fr 1vw 1fr 1vw 1fr 1vw 1fr 1vw 1fr 1vw 1fr 1vw 1fr 1vw 1fr 1vw 1fr 1vw 1fr;
  align-items: stretch;
  justify-items: stretch;
}
#field {
  grid-template-rows: auto;
}
#defense, #offense, #los {
  grid-column-start: 1;
  grid-column-end: -1;
  grid-auto-rows: auto;
}
#defense {
  grid-template-rows: [safety] minmax(1vh, 10vh) [linebacker] minmax(1vh, 10vh) [defensive_los] minmax(1vh, 10vh);
  grid-row-start: 1;
  grid-row-end: 4;
  grid-auto-rows: auto;
}
#defense > #label_defense, #offense > #label_offense {
  place-self: start;
}
#defense > div {
  place-self: center;
}
#offense > div, #los > div, #defense > div {
  place-self: stretch;
  display: flex;
  justify-content: center;
}
#defense > div {
  align-content: flex-end;
  border-top: 2px dashed white;
}
#los > div {
  align-content: space-around;
  font-size: 1rem;
}
#offense > div {
  align-content: flex-start;
  border-bottom: 2px dashed white;
}
#offense, #defense {}
#los {
  grid-row-start: 4;
  grid-row-end: 5;
  background-color: white;
  color: black;
  align-items: center;
  grid-template-rows: [los] auto;
  /*
  padding-top: 0.25em;
  padding-bottom: 0.25em;
*/
}
#offense {
  grid-template-rows: [offensive_los] minmax(1vh, 10vh) [off] minmax(1vh, 10vh) [shotgun] minmax(1vh, 10vh) [deep] minmax(1vh, 10vh);
  grid-auto-rows: auto;
  grid-row-start: 5;
  grid-row-end: 8;
}
#defense > div:hover {
  background-color: cyan;
}
#offense > div:hover {
  background-color: magenta;
}
#ball {
  color: white;
  grid-column-start: 13;
  grid-row-start: los;
  background: url("../images/football.svg");
  background-repeat: no-repeat;
  background-position: center;
}
#field > div > div {
  /* justify-self: center;
    align-self: center;
	  text-align: center;*/
}
/*
#field > div > div.position-node {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  color: lightgrey;
  background: url("../images/helmet.svg");
  background-repeat: no-repeat;
  background-position: center;
}
*/
#defense .position-node {
  background-color: darkblue;
}
.grid-item-gap {
  text-align: center;
  background-color: #333d39;
  /*  font-size: clamp(1vw, 1.5vw, 2vw);*/
  z-index: 10;
}
.grid-item-gap > div {
  line-height: 1;
}
.grid-item-position {}
#offense .grid-item-position {
  background-color: #9f1e22;
}
#defense .grid-item-position {
  background-color: darkblue;
}
#defense .grid-item-position, #defense .grid-item-gap {
  align-items: flex-end;
}
/*
* Position Background Images (or not)
*/
#defense .position-node {
  background: url("../images/helmet.svg");
  background-repeat: no-repeat;
  background-position: center;
  color: rgba(255, 255, 255, 1); /* hahaha, hope this works! */
}
#defense.hide-position-text .position-node {
   color: rgba(0, 0, 0, 0); /* hahaha, hope this works! */
}
.grid-item-gap, .grid-item-position {
  color: #f1f1f0;
  line-height: 1;
}
.gap-text {
  font-size: 80%;
  line-height: 70%;
}
.position-offense {
  line-height: 1;
}
/**
* The Builder Form
*/
form label {
  display: none;
}
#pos-d-1 {
  grid-column-start: 13;
  grid-row-start: 3;
}
#pos-d-2 {
  grid-column-start: 15;
  grid-row-start: 3;
}
#pos-d-3 {
  grid-column-start: 19;
  grid-row-start: 3;
}
#pos-d-4 {
  grid-column-start: 21;
  grid-row-start: 3;
}
#pos-d-5 {
  grid-column-start: 25;
  grid-row-start: 3;
}
#pos-d-6 {
  grid-column-start: 27;
  grid-row-start: 3;
}
#pos-d-7 {
  grid-column-start: 17;
  grid-row-start: 2;
}
#pos-d-8 {
  grid-column-start: 23;
  grid-row-start: 2;
}
#pos-d-9 {
  grid-column-start: 12;
  grid-row-start: 2;
}
#pos-d-10 {
  grid-column-start: 29;
  grid-row-start: 2;
}
#pos-d-11 {
  grid-column-start: 20;
  grid-row-start: 1;
}
/* Blocking Identifier Styles */
.blocking-identifier-1 {
  border: 2px solid black;
  background-color: red;
  color: black;
}
.blocking-identifier-2 {
  border: 2px dashed black;
  background-color: orange;
  color: black;
}
.blocking-identifier-3 {
  border: 2px dashed black;
  background-color: yellow;
  color: black;
}
.blocking-identifier-4 {
  border: 2px dashed black;
  background-color: rgb(0, 204, 255);
  color: black;
}

